# harvest-flow/api/src/tsoa/routes.ts
@@ -3,16 +3,90 @@
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { Controller, ValidationService, FieldErrors, ValidateError, TsoaRoute, HttpStatusCodeLiteral, TsoaResponse, fetchMiddlewares } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { UserNftsController } from './../controllers/userNfts';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { NftHistoryController } from './../controllers/nftHistory';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { DetailedNftContractController } from './../controllers/detailedNftContract';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { ClaimableController } from './../controllers/claimable';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { AllNftContractController } from './../controllers/allNftContract';
 import type { RequestHandler, Router } from 'express';
 
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "AllNftContractResponse": {
+    "Record_string.number-Array_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{},"additionalProperties":{"dataType":"array","array":{"dataType":"double"}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GetUserNftsResponse": {
         "dataType": "refObject",
         "properties": {
-            "dummy": {"dataType":"string","required":true},
+            "ownedNfts": {"ref":"Record_string.number-Array_","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "NftHistoryEventType": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["contract_created"]},{"dataType":"enum","enums":["purchase"]},{"dataType":"enum","enums":["activate"]},{"dataType":"enum","enums":["claim"]},{"dataType":"enum","enums":["remove_principal"]},{"dataType":"enum","enums":["withdraw"]},{"dataType":"enum","enums":["deposit"]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "NftHistoryEvent": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"transactionHash":{"dataType":"string","required":true},"eventType":{"ref":"NftHistoryEventType","required":true},"timestamp":{"dataType":"double","required":true}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "NftHistoryResponse": {
+        "dataType": "refObject",
+        "properties": {
+            "address": {"dataType":"string","required":true},
+            "history": {"dataType":"array","array":{"dataType":"refAlias","ref":"NftHistoryEvent"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GetDetailedNftContractResponse": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string","required":true},
+            "symbol": {"dataType":"string","required":true},
+            "chainId": {"dataType":"string","required":true},
+            "address": {"dataType":"string","required":true},
+            "supplyCap": {"dataType":"double","required":true},
+            "mintedAmount": {"dataType":"double","required":true},
+            "leaseStart": {"dataType":"double","required":true},
+            "leaseEnd": {"dataType":"double","required":true},
+            "minYield": {"dataType":"double","required":true},
+            "accepted_token": {"dataType":"string","required":true},
+            "price": {"dataType":"string","required":true},
+            "poolBalance": {"dataType":"string","required":true},
+            "metadata": {"dataType":"any","required":true},
+            "activated": {"dataType":"boolean","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GetClaimableResponse": {
+        "dataType": "refObject",
+        "properties": {
+            "yield": {"dataType":"string","required":true},
+            "principal": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GetAllNftContractsResponse": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string","required":true},
+            "symbol": {"dataType":"string","required":true},
+            "chainId": {"dataType":"string","required":true},
+            "leaseStart": {"dataType":"double","required":true},
+            "leaseEnd": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
@@ -27,12 +101,114 @@ export function RegisterRoutes(app: Router) {
     //  NOTE: If you do not see routes for all of your controllers in this file, then you might not have informed tsoa of where to look
     //      Please look into the "controllerPathGlobs" config option described in the readme: https://github.com/lukeautry/tsoa
     // ###########################################################################################################
-        app.get('/all_nft_contract',
+        app.get('/user_nfts',
+            ...(fetchMiddlewares<RequestHandler>(UserNftsController)),
+            ...(fetchMiddlewares<RequestHandler>(UserNftsController.prototype.get)),
+
+            function UserNftsController_get(request: any, response: any, next: any) {
+            const args = {
+                    userAddress: {"in":"query","name":"userAddress","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new UserNftsController();
+
+
+              const promise = controller.get.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/nft_history',
+            ...(fetchMiddlewares<RequestHandler>(NftHistoryController)),
+            ...(fetchMiddlewares<RequestHandler>(NftHistoryController.prototype.get)),
+
+            function NftHistoryController_get(request: any, response: any, next: any) {
+            const args = {
+                    address: {"in":"query","name":"address","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new NftHistoryController();
+
+
+              const promise = controller.get.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/detailed_nft',
+            ...(fetchMiddlewares<RequestHandler>(DetailedNftContractController)),
+            ...(fetchMiddlewares<RequestHandler>(DetailedNftContractController.prototype.get)),
+
+            function DetailedNftContractController_get(request: any, response: any, next: any) {
+            const args = {
+                    address: {"in":"query","name":"address","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new DetailedNftContractController();
+
+
+              const promise = controller.get.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/claimable',
+            ...(fetchMiddlewares<RequestHandler>(ClaimableController)),
+            ...(fetchMiddlewares<RequestHandler>(ClaimableController.prototype.get)),
+
+            function ClaimableController_get(request: any, response: any, next: any) {
+            const args = {
+                    nftAddress: {"in":"query","name":"nftAddress","required":true,"dataType":"string"},
+                    tokenId: {"in":"query","name":"tokenId","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new ClaimableController();
+
+
+              const promise = controller.get.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/all_nft',
             ...(fetchMiddlewares<RequestHandler>(AllNftContractController)),
             ...(fetchMiddlewares<RequestHandler>(AllNftContractController.prototype.get)),
 
             function AllNftContractController_get(request: any, response: any, next: any) {
             const args = {
+                    notEnded: {"default":true,"in":"query","name":"notEnded","dataType":"boolean"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
